--- a/Kosci3a/MainWindow.xaml
+++ b/Kosci3a/MainWindow.xaml
@@ -6,11 +6,36 @@
         xmlns:local="clr-namespace:Kosci3a"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <DockPanel>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
         <Button Content="Roll" Click="rollbtn_Click" 
-                DockPanel.Dock="Bottom"/>
-        <Button Content="Clear" 
+                Grid.Row="1"/>
+        <Button Content="Start"
+                x:Name="startbtn"
+                Grid.Column="2"
+                />
+        <Button Content="Zatwierdź"
+                x:Name="zatwierdzbtn"
+                Grid.Column="1"
+                Grid.Row="1"/>
+        <TextBlock Text="suma punktów"
+                   Grid.Column="2"
+                   Grid.Row="1"/>
+        <!--<Button Content="Clear" 
                 DockPanel.Dock="Bottom" Click="clearbtn_Click"/>
+        -->
+        <DataGrid Grid.Column="1"
+                  >
+            
+        </DataGrid>
         <ItemsControl ItemsSource="{Binding results}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -101,5 +126,5 @@
             </ItemsControl.ItemTemplate>
             
         </ItemsControl>
-    </DockPanel>
+    </Grid>
 </Window>
